--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.2
   fl_chart: ^0.69.0
   animated_bottom_navigation_bar: ^1.3.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
